eventos optimizados, combobox razas